--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Print debug info
         run: |
           $ErrorActionPreference = 'Continue'
-          C:\msys64\usr\bin\bash.exe -l -c 'pwd; ls -lR; find . -type f -name binaries.tar.gz'
+          C:\msys64\usr\bin\bash.exe -l -c 'pwd; ls -lR; ls -lR shadowsocks-libev/build/dst shadowsocks-libev/build/dst/binaries.tar.gz; find . -type f -name binaries.tar.gz'
 
       - name: Make and upload release
         uses: softprops/action-gh-release@v1
