--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,35 +8,27 @@ on:
 
 jobs:
   build:
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [x86, x86_64]
-        toolchain: [cygwin]
     runs-on: windows-2019
     env:
-      DEPLOYKEY: ${{ secrets.DEPLOYKEY }}
-      ARCH: ${{ matrix.arch }}
-      TOOLCHAIN: ${{ matrix.toolchain }}
+      ARCH: x86_64
+      TOOLCHAIN: cygwin
     steps:
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@master
       - shell: powershell
-        if: ${{ matrix.toolchain == 'cygwin' }}
         run: |
-          Invoke-WebRequest -Uri https://cygwin.com/setup-${{ matrix.arch }}.exe -OutFile cygwin.exe
+          # Download and install Cygwin
+          Invoke-WebRequest -Uri https://cygwin.com/setup-${{ env.ARCH }}.exe -OutFile cygwin.exe
           start -Wait .\cygwin.exe '-qng -R cygwin -s http://cygwin.mirror.constant.com -P git -P curl -P gettext -P gcc-core -P gcc-g++ -P cmake -P make -P libpcre-devel -P libcares-devel -P libev-devel -P libsodium-devel -P mbedtls-devel'
+
+          # Run the build script
           .\cygwin\bin\bash.exe -le (Join-Path (Get-Location) build.sh)
 
-      - name: Print debug info
-        run: |
-          $ErrorActionPreference = 'Continue'
-          C:\msys64\usr\bin\bash.exe -l -c 'pwd; ls -lR; ls -lR /home/runneradmin/shadowsocks-libev/build/dst /home/runneradmin/binaries.tar.gz; find . -type f -name binaries.tar.gz'
 
       - name: Make and upload release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           fail_on_unmatched_files: false
-          files: /home/runneradmin/binaries.tar.gz
+          files: D:\shadowsocks-builds\shadowsocks-libev-${{ env.TOOLCHAIN }}-${{ env.ARCH }}.tar.gz
 
